test: Mockito 에이전트 정적 등록